--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -73,7 +73,7 @@ p {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.025em;
-  text-transform: capitalize;
+  // text-transform: capitalize;
   color: $black;
   flex: none;
   order: 1;
