--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1313,6 +1313,127 @@ nav .hamburger {
   margin-top: 50px;
 }
 
+.tabs .t_content .recent {
+  margin-top: 45px;
+}
+
+.tabs .t_content .recent h3 {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 25px;
+  margin-bottom: 30px;
+  text-transform: capitalize;
+}
+
+.tabs .t_content .recent .track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 24px;
+}
+
+.tabs .t_content .recent .track .device h4 {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 19px;
+  text-transform: capitalize;
+}
+
+.tabs .t_content .recent .track .device p {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  color: rgba(51, 51, 51, 0.7);
+}
+
+.tabs .t_content .recent .track .device p span {
+  color: #333333;
+}
+
+.tabs .t_content .recent .track img {
+  width: 35px;
+  height: 35px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
+.tabs .t_content .factors {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.tabs .t_content .factors .cng {
+  width: 70%;
+}
+
+.tabs .t_content .factors .cng h2 {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.tabs .t_content .factors .cng p {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: 0.04em;
+  color: rgba(51, 51, 51, 0.7);
+}
+
+.tabs .t_content .factors .swit {
+  width: 13%;
+}
+
+.tabs .t_content .factors .swit input {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+.tabs .t_content .factors .swit input:checked + label {
+  background: #d982aa;
+}
+
+.tabs .t_content .factors .swit input:checked + label::after {
+  left: calc(100% - 6px);
+  -webkit-transform: translateX(-94%);
+          transform: translateX(-94%);
+}
+
+.tabs .t_content .factors .swit label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 50px;
+  height: 31px;
+  background: grey;
+  display: block;
+  border-radius: 100px;
+  position: relative;
+}
+
+.tabs .t_content .factors .swit label::after {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 25px;
+  height: 25px;
+  background: #fff;
+  border-radius: 90px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
 .tabs hr {
   border: 1px solid rgba(51, 51, 51, 0.6);
 }
@@ -1774,6 +1895,17 @@ nav .hamburger {
   }
   .tabs .t_content form button {
     max-width: 170px;
+  }
+  .log {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .tabs .t_content .log button {
+    width: 30%;
   }
 }
 
