--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1022,6 +1022,105 @@ nav {
         margin-top: 50px;
       }
     }
+
+    .recent {
+      margin-top: 45px;
+      h3 {
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 25px;
+        margin-bottom: 30px;
+        text-transform: capitalize;
+      }
+      .track {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 24px;
+        .device {
+          h4 {
+            font-weight: bold;
+            font-size: 14px;
+            line-height: 19px;
+
+            text-transform: capitalize;
+          }
+          p {
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 16px;
+
+            color: rgba(51, 51, 51, 0.7);
+            span {
+              color: rgba(51, 51, 51, 1);
+            }
+          }
+        }
+        img {
+          width: 35px;
+          height: 35px;
+          object-fit: cover;
+          cursor: pointer;
+          margin-top: 5px;
+        }
+      }
+    }
+
+    .factors {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 40px;
+      .cng {
+        width: 70%;
+        h2 {
+          font-weight: 800;
+          font-size: 18px;
+          line-height: 25px;
+        }
+        p {
+          font-weight: 600;
+          font-size: 16px;
+          line-height: 22px;
+          letter-spacing: 0.04em;
+          color: rgba(51, 51, 51, 0.7);
+        }
+      }
+      .swit {
+        width: 13%;
+        input {
+          height: 0;
+          width: 0;
+          visibility: hidden;
+          &:checked + label {
+            background: $pk;
+            &::after {
+              left: calc(100% - 6px);
+              transform: translateX(-94%);
+            }
+          }
+        }
+        label {
+          cursor: pointer;
+          text-indent: -9999px;
+          width: 50px;
+          height: 31px;
+          background: grey;
+          display: block;
+          border-radius: 100px;
+          position: relative;
+          &::after {
+            content: "";
+            position: absolute;
+            top: 3px;
+            left: 3px;
+            width: 25px;
+            height: 25px;
+            background: #fff;
+            border-radius: 90px;
+            transition: 0.3s;
+          }
+        }
+      }
+    }
   }
   hr {
     border: 1px solid rgba(51, 51, 51, 0.6);
@@ -1462,6 +1561,13 @@ nav {
   }
   .tabs .t_content form button {
     max-width: 170px;
+  }
+  .log {
+    display: flex;
+    justify-content: space-between;
+  }
+  .tabs .t_content .log button {
+    width: 30%;
   }
 }
 @media (max-width: 560px) {
