--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -854,7 +854,7 @@ nav {
     font-size: 16px;
     line-height: 22px;
     color: rgba(51, 51, 51, 0.8);
-    margin-right: 25px;
+    margin-right: 5px;
   }
 
   .t_content {
@@ -1035,18 +1035,18 @@ nav {
         justify-content: space-between;
         margin-bottom: 24px;
         .device {
+          margin-left: 40px;
+          position: relative;
           h4 {
             font-weight: bold;
             font-size: 14px;
             line-height: 19px;
-
             text-transform: capitalize;
           }
           p {
             font-weight: 600;
             font-size: 12px;
             line-height: 16px;
-
             color: rgba(51, 51, 51, 0.7);
             span {
               color: rgba(51, 51, 51, 1);
@@ -1067,7 +1067,7 @@ nav {
       justify-content: space-between;
       margin-bottom: 40px;
       .cng {
-        width: 70%;
+        width: 80%;
         h2 {
           font-weight: 800;
           font-size: 18px;
@@ -1075,7 +1075,7 @@ nav {
         }
         p {
           font-weight: 600;
-          font-size: 16px;
+          font-size: 15px;
           line-height: 22px;
           letter-spacing: 0.04em;
           color: rgba(51, 51, 51, 0.7);
@@ -1096,6 +1096,7 @@ nav {
           }
         }
         label {
+          margin-top: 10px;
           cursor: pointer;
           text-indent: -9999px;
           width: 50px;
@@ -1124,6 +1125,25 @@ nav {
   }
 }
 
+.desktop {
+  &::before {
+    content: url("../../images/Deskstop.svg");
+    margin-right: 10px;
+    position: absolute;
+    left: 0;
+    top: 5px;
+    left: -38px;
+  }
+}
+
+.phone {
+  &::before {
+    content: url("../../images/phone.svg");
+    margin-right: 10px;
+    position: absolute;
+    left: -38px;
+  }
+}
 // MAX WIDTH STARTs FROM HERE
 @media (max-width: 767px) {
   nav {
