--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -854,7 +854,7 @@ nav {
     font-size: 16px;
     line-height: 22px;
     color: rgba(51, 51, 51, 0.8);
-    margin-right: 5px;
+    // margin-right: 5px;
   }
 
   .t_content {
@@ -1142,6 +1142,7 @@ nav {
     margin-right: 10px;
     position: absolute;
     left: -38px;
+    top: 5px;
   }
 }
 // MAX WIDTH STARTs FROM HERE
