--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   font-family: "Nunito", sans-serif;
 }
 body {
@@ -79,26 +81,56 @@ main .first {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 550px;
-  width: auto;
+  justify-content: center; */
+  height: 100vh;
+
+  /* width: auto; */
 }
-main .first h1,
-main .first p {
-  width: 40%;
+.great {
+  padding-top: 80px;
+  position: relative;
+}
+.crab img {
+  position: absolute;
+  width: 600px;
+  /* height: 420px; */
+  object-fit: cover;
+  transform: translate(60%, 70%);
+  filter: drop-shadow(-9px 10px 4px rgba(0, 0, 0, 0.16))
+    drop-shadow(4px 10px 4px rgba(0, 0, 0, 0.16));
+  border-radius: 5px;
+  top: 100px;
+}
+.mmy {
+  width: 70%;
+  margin: 0 auto;
+}
+main .first h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 65px;
   text-align: center;
   color: #ffffff;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
 }
-main .first img {
+main .first p {
+  font-weight: normal;
+  font-size: 14px;
+  margin: 40px auto;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 0.04em;
+  /* margin-top: 20px; */
+  width: 70%;
+  color: #ffffff;
+}
+/* main .first img {
   width: 26rem;
   margin-top: 50px;
-}
+} */
 main .ptext {
   justify-content: center;
   align-items: center;
