--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1235,7 +1235,7 @@ nav .hamburger {
 }
 
 .tabs .t_content .tabulate {
-  width: 1022px;
+  max-width: 1022px;
   overflow: scroll;
   margin-top: 100px;
   margin-bottom: 50px;
