--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -950,7 +950,7 @@ nav {
       width: 30px;
     }
     .tabulate {
-      width: 1022px;
+      max-width: 1022px;
       overflow: scroll;
       margin-top: 100px;
       margin-bottom: 50px;
