--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
+  outline: 0;
   font-family: "Nunito Sans", sans-serif;
 }
 
