--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -951,9 +951,13 @@ nav {
     }
     .tabulate {
       max-width: 1022px;
-      overflow: scroll;
+      // overflow: scroll;
       margin-top: 100px;
+      // width: 100%;
       margin-bottom: 50px;
+      border: 2px solid #eeeeee;
+      border-radius: 5px;
+
       .wrap_head {
         background-color: $white;
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
@@ -1304,7 +1308,9 @@ hr {
     left: -38px;
   }
 }
-
+.grim {
+  background-color: #d8d8d8;
+}
 .phone {
   &::before {
     content: url("../../images/phone.svg");
@@ -1320,16 +1326,16 @@ hr {
     display: none;
   }
   .tabs .t_content .tabulate .wrap_head .hd .tt_head {
-    width: 24%;
+    width: 50%;
   }
   .tabs .t_content .tabulate .wrap_head .hd .sta {
     width: 40%;
   }
   .tabs .t_content .tabulate .wrap_list .gd .dls {
-    width: 44%;
+    width: 38%;
   }
   .tabs .t_content .tabulate .wrap_list .gd .tt_list {
-    width: 50%;
+    width: 80%;
   }
 }
 @media (max-width: 767px) {
